[#155638405] fix - search bar off alignment on dashboard

--- a/src/sass/components/_searchContent.scss
+++ b/src/sass/components/_searchContent.scss
@@ -26,7 +26,7 @@
 }
 
 #searchTypeContainer {
-  top: -23px;
+  top: -20px;
   float: left;
   margin: auto;
   width: 250px;
